--- a/projetsUni.css
+++ b/projetsUni.css
@@ -9,6 +9,20 @@ body {
   background-position: bottom right;
 }
 
+
+header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px; /* espace entre les boutons */
+    padding: 20px;
+    font-size: 1.2em; /* agrandit le texte des boutons */
+    background-color: rgba(13, 0, 0, 0.436); /* léger fond (optionnel) */
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+}
+
 .ProjetsUni {
   display: flex;
   gap: 2rem;
@@ -89,4 +103,29 @@ button:hover {
   top: 10px;
   right: 15px;
   font-size: 1.3rem;
+}
+
+.btn {
+    text-decoration: none;
+    padding: 10px;
+    font-family: arial;
+    font-size: 1em;
+    color: #FFFFFF;
+    background-color: #b2a2c7;
+    border-radius: 24px;
+    -webkit-border-radius: 24px;
+    -moz-border-radius: 24px;
+    border: 4px solid #e5e0ec;
+    box-shadow: 3px 3px 8px #444444;
+    -webkit-box-shadow: 3px 3px 8px #444444;
+    -moz-box-shadow: 3px 3px 8px #444444;
+}
+
+
+.btn:hover {
+    padding: 10px;
+    border: 4px dotted #e5e0ec;
+    box-shadow: 1px 1px 4px #777777;
+    -webkit-box-shadow: 1px 1px 4px #777777;
+    -moz-box-shadow: 1px 1px 4px #777777;
 }
