--- a/index.css
+++ b/index.css
@@ -18,14 +18,15 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 30px; /* espace entre les boutons */
-    padding: 20px;
-    font-size: 1.2em; /* agrandit le texte des boutons */
-    background-color: rgba(13, 0, 0, 0.436); /* léger fond (optionnel) */
+    gap: 30px;
+    padding: 30px; 
+    font-size: 1.4em; 
+    background-color: rgba(13, 0, 0, 0.436);
     position: sticky;
     top: 0;
     z-index: 1000;
 }
+
 
 
 
@@ -91,6 +92,7 @@ header {
     flex-wrap: wrap; 
     gap: 20px;
     text-align: center;
+    font-size: 2em;
  }
 
 
@@ -121,28 +123,20 @@ header {
 }
 
 .btn {
-    text-decoration: none;
-    padding: 10px;
-    font-family: arial;
-    font-size: 1em;
+    padding: 14px 20px; 
+    font-size: 1.1em;   
     color: #FFFFFF;
     background-color: #b2a2c7;
     border-radius: 24px;
-    -webkit-border-radius: 24px;
-    -moz-border-radius: 24px;
     border: 4px solid #e5e0ec;
     box-shadow: 3px 3px 8px #444444;
-    -webkit-box-shadow: 3px 3px 8px #444444;
-    -moz-box-shadow: 3px 3px 8px #444444;
+    transition: all 0.3s ease;
 }
 
-
 .btn:hover {
-    padding: 10px;
     border: 4px dotted #e5e0ec;
     box-shadow: 1px 1px 4px #777777;
-    -webkit-box-shadow: 1px 1px 4px #777777;
-    -moz-box-shadow: 1px 1px 4px #777777;
+    transform: scale(1.05);
 }
 
 
@@ -191,6 +185,7 @@ header {
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
+    text-align: center;
 }
 
 .card {
